# multi-choice_contingency_tables

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
datasha/: app.py  utils.py
datasha/tabs/: datasource.py
multi_choice_contingency_tables/: app.py  cross_bd.py
multi_choice_contingency_tables/tabs/: datasource.py  vis.py
try_dash/: app.py  cross_bd.py
try_dash/data/: Stack Overflow 2018 Developer Survey.pickle
try_dash/tabs/: datasource.py  vis.py
