[tool.poetry]
name = "try-dash"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "try_dash"}]

[tool.poetry.dependencies]
python = "3.11.4"
dash = "^2.10.2"
pandas = "^2.0.2"
jupyter = "^1.0.0"
icecream = "^2.1.3"
visions = "^0.7.5"
statsmodels = "^0.14.0"
dash-daq = "^0.5.0"
dash-bootstrap-components = "^1.4.1"
scipy = "^1.10.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
